@@ -1,0 +1,10 @@
+<h1>K-pop界大事！NCT成員鄭在玹入伍、Xdinary Heroes新EP、Billlie全員回歸、MONSTA X慶祝粉絲團九週年</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HerU6Gzn_O4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>NCT 的郑在玹將於 11 月 4 日入伍，服兵役至 2026 年 5 月。他將作為軍樂隊成員服役。</p><p>SM娛樂公司確認了這一消息，並表示郑在玹已申請加入軍樂隊並被接受。他於去年作為 NCT 成員出道，將是繼李泰容之後第二位入伍的成員。李泰容自 4 月起已加入海軍樂隊。</p><p>郑在玹上個月發行了他的首張個人專輯《J》，主打歌《Smoke》在電視音樂榜單中排名第一。下個月，他還將在電影《You Will Die in 6 Hours》中首次亮相，這部電影改編自高野和明的驚悚小說。</p><h2>Xdinary Heroes 將於下月發行第五張 EP</h2><p>Xdinary Heroes 將於 10 月 14 日發行第五張 EP《Live and Fall》。該樂隊的上一張專輯是 4 月發行的首張錄音室專輯《Troubleshooting》，但自那時起，他們已發行了四首數字單曲。</p><p>樂隊的六位成員在本月早些時候的首爾演唱會上告訴粉絲這個消息，這也是他們 15 場演唱會項目《Closed beta》的最後一場演出。在最後一場演唱會上，他們與嘉賓尹度玹共同表演了《iNSTEAD!》。</p><p>Xdinary Heroes 將於 11 月 15-17 日在首爾舉辦單獨演唱會，門票很快就售罄，就像過去五場演唱會一樣。</p><h2>Billlie 將發行全員專輯</h2><h1>Billlie 將發行新專輯，慶祝所有成員回歸</h1><p>女子組合 Billlie 將於 10 月中旬發行新專輯，這是所有七位成員在一年半以來首次共同參與的專輯。該組合在第四張 EP《The Billage of Perception: Chapter Three》之後，發行了首張單曲專輯《Side-B: Memoirs of Echo Unseen》和兩首數字單曲，即第一和第二版的《The Billlie’s Odditorium》。</p><p>成員 Moon Sua 和 Suhyeon 曾因健康原因休假，但在 5 月恢復活動，先是在首爾舉辦粉絲演唱會。該組合作為整體，於 7 月底訪問了歐洲九座城市，進行了首次國際巡演《Our Flowerld》，並將於 11 月訪問北美和拉丁美洲的 14 座城市。</p><h2>MONSTA X 慶祝粉絲俱樂部成立 9 周年</h2><h2>MONSTA X 將舉行直播慶祝粉絲團九週年</h2><p>MONSTA X 即將舉行直播，慶祝其官方粉絲團「萌貝貝」（Monbebe）九週年。樂團成員們上傳了一段影片，表達對粉絲們的感謝，並展示了手寫的賀詞。</p>
+<p>隊長孫賢佑承諾將舉行直播，而亨源則公開了一段他在入伍前拍攝的幕後花絮影片。目前，該樂團有四名成員正在服兵役。</p>
+<p>最年輕的成員任昌均即將結束他的個人世界巡演，該巡演橫跨六個國家的14個城市，並將於週日在澳門演出。</p>
+<p>MONSTA X 於五月份舉行了九週年出道紀念直播，由孫賢佑和任昌均出席。</p>
+
+<p>資料來源： Korea Herald</p>
